--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 </footer>
 
 <script>
-  const API_KEY = "YOUR_API_KEY_HERE"; // api-football.com
+  const API_KEY = "32a94097e144fbded05a2537984eb315"; // api-football.com
   const container = document.getElementById("matches");
   const leagueSelect = document.getElementById("leagueSelect");
   const teamInput = document.getElementById("teamInput");
