--- a/index.html
+++ b/index.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Football Site</title>
+    <title>Footy Site</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
 
-    <div class="top-bar">
-        <h1>project v1</h1>
+    <div class="H">
+        <h1>made by alan</h1>
     </div>
 
-    <div class="content">
-        <div class="date-controls">
-            <button class="btn" onclick="goBack()">Back</button>
-            <div class="date-text">
-                <h2 id="dayText">Today</h2>
-                <p id="fullDate"></p>
+    <div class="C">
+        <div class="D">
+            <button onclick="B()">Back</button>
+            <div class="T">
+                <h2 id="day">Today</h2>
+                <p id="dt"></p>
             </div>
-            <button class="btn" onclick="goForward()">Forward</button>
+            <button onclick="F()">Next</button>
         </div>
 
-        <div id="matches-container">
+        <div id="m-box">
             <p>Loading...</p>
         </div>
     </div>
